--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -16,4 +16,6 @@ qt6_add_qml_module(content
         QML_FILES ClockSegment.qml
         QML_FILES ClockTickThin.qml
         QML_FILES ClockText.qml
+        QML_FILES
+        QML_FILES ClockHand.qml
 )
