Fix minute-hour synchronization + add time text

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -19,4 +19,5 @@ qt6_add_qml_module(content
         QML_FILES
         QML_FILES InteractiveClockHands.qml
         QML_FILES ClockHand.qml
+        QML_FILES TimeText.qml
 )
