--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -14,7 +14,7 @@ qt6_add_qml_module(content
         QML_FILES Clock.qml
         QML_FILES ClockTick.qml
         QML_FILES ClockSegment.qml
-        QML_FILES ClockTickThin.qml
+        QML_FILES
         QML_FILES ClockText.qml
         QML_FILES
         QML_FILES InteractiveClockHands.qml
